# dddg

./: .gitignore  README.md  dev.ipynb  model.ipynb  pyproject.toml
.github/workflows/: publish.yml
src/dddg/: __main__.py  duck.py  image.py  loader.py  model.py  solver.py
src/dddg/config/: __init__.py  default.toml
src/dddg/inference/: attributes.csv  infer.py  labels.toml  model.py
