[tool.poetry]
name = "dddg"
version = "0.1.0"
description = "dddg game solver"
authors = ["ionite34 <dev@ionite.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
requests = "^2.28.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
opencv-python = "4.5.5.62"
webcolors = "^1.12"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.6.0"
black = "^22.8.0"
torchviz = "^0.0.2"

[tool.poetry.scripts]
dddg = "dddg.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
